tests/semantic_errors/err02_return_mismatch.java
public class Error02 {
    public static int test() {
        return true; // Error: Return type mismatch
    }
    public static void main(String[] args) {
    }
}
